// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"outputPath" option should work with "Function" value and with "publicPath" as "Function": assets 1`] = `
Array [
  "39f5c21c1aee6ff21844c6e1d8251d97png",
  "main.bundle.js",
]
`;

exports[`"outputPath" option should work with "Function" value and with "publicPath" as "Function": errors 1`] = `Array []`;

exports[`"outputPath" option should work with "Function" value and with "publicPath" as "Function": result 1`] = `"public_path_func/39f5c21c1aee6ff21844c6e1d8251d97png?w=150&h=150"`;

exports[`"outputPath" option should work with "Function" value and with "publicPath" as "Function": warnings 1`] = `Array []`;

exports[`"outputPath" option should work with "Function" value and with "publicPath" as "String": assets 1`] = `
Array [
  "39f5c21c1aee6ff21844c6e1d8251d97png",
  "main.bundle.js",
]
`;

exports[`"outputPath" option should work with "Function" value and with "publicPath" as "String": errors 1`] = `Array []`;

exports[`"outputPath" option should work with "Function" value and with "publicPath" as "String": result 1`] = `"public_path/39f5c21c1aee6ff21844c6e1d8251d97png?w=150&h=150"`;

exports[`"outputPath" option should work with "Function" value and with "publicPath" as "String": warnings 1`] = `Array []`;

exports[`"outputPath" option should work with "String" value and with "name" option: assets 1`] = `
Array [
  "filepng",
  "main.bundle.js",
]
`;

exports[`"outputPath" option should work with "String" value and with "name" option: errors 1`] = `Array []`;

exports[`"outputPath" option should work with "String" value and with "name" option: result 1`] = `"filepng"`;

exports[`"outputPath" option should work with "String" value and with "name" option: warnings 1`] = `Array []`;

exports[`"outputPath" option should work with "String" value and with "publicPath" as "Function": assets 1`] = `
Array [
  "39f5c21c1aee6ff21844c6e1d8251d97png",
  "main.bundle.js",
]
`;

exports[`"outputPath" option should work with "String" value and with "publicPath" as "Function": errors 1`] = `Array []`;

exports[`"outputPath" option should work with "String" value and with "publicPath" as "Function": result 1`] = `"public_path_func/39f5c21c1aee6ff21844c6e1d8251d97png?w=150&h=150"`;

exports[`"outputPath" option should work with "String" value and with "publicPath" as "Function": warnings 1`] = `Array []`;

exports[`"outputPath" option should work with "String" value and with "publicPath" option and without trailing slash: assets 1`] = `
Array [
  "39f5c21c1aee6ff21844c6e1d8251d97png",
  "main.bundle.js",
]
`;

exports[`"outputPath" option should work with "String" value and with "publicPath" option and without trailing slash: errors 1`] = `Array []`;

exports[`"outputPath" option should work with "String" value and with "publicPath" option and without trailing slash: result 1`] = `"public_path/39f5c21c1aee6ff21844c6e1d8251d97png?w=150&h=150"`;

exports[`"outputPath" option should work with "String" value and with "publicPath" option and without trailing slash: warnings 1`] = `Array []`;

exports[`"outputPath" option should work with "String" value and with "publicPath" option: assets 1`] = `
Array [
  "39f5c21c1aee6ff21844c6e1d8251d97png",
  "main.bundle.js",
]
`;

exports[`"outputPath" option should work with "String" value and with "publicPath" option: errors 1`] = `Array []`;

exports[`"outputPath" option should work with "String" value and with "publicPath" option: result 1`] = `"public_path/39f5c21c1aee6ff21844c6e1d8251d97png?w=150&h=150"`;

exports[`"outputPath" option should work with "String" value and with "publicPath" option: warnings 1`] = `Array []`;

exports[`"outputPath" option should work with "String" value without trailing slash: assets 1`] = `
Array [
  "39f5c21c1aee6ff21844c6e1d8251d97png",
  "main.bundle.js",
]
`;

exports[`"outputPath" option should work with "String" value without trailing slash: errors 1`] = `Array []`;

exports[`"outputPath" option should work with "String" value without trailing slash: result 1`] = `"39f5c21c1aee6ff21844c6e1d8251d97png"`;

exports[`"outputPath" option should work with "String" value without trailing slash: warnings 1`] = `Array []`;

exports[`"outputPath" option should work with "String" value: assets 1`] = `
Array [
  "39f5c21c1aee6ff21844c6e1d8251d97png",
  "main.bundle.js",
]
`;

exports[`"outputPath" option should work with "String" value: errors 1`] = `Array []`;

exports[`"outputPath" option should work with "String" value: result 1`] = `"39f5c21c1aee6ff21844c6e1d8251d97png"`;

exports[`"outputPath" option should work with "String" value: warnings 1`] = `Array []`;

exports[`"outputPath" option should work without value: assets 1`] = `
Array [
  "39f5c21c1aee6ff21844c6e1d8251d97png",
  "main.bundle.js",
]
`;

exports[`"outputPath" option should work without value: errors 1`] = `Array []`;

exports[`"outputPath" option should work without value: result 1`] = `"39f5c21c1aee6ff21844c6e1d8251d97png"`;

exports[`"outputPath" option should work without value: warnings 1`] = `Array []`;
